Changelog
=========

All notable changes to this project will be documented in this file.

The format is based on `Keep a Changelog <http://keepachangelog.com/>`_
and this project adheres to `Semantic Versioning <http://semver.org/>`_

Unreleased version
------------------



0.3.0 - 2017-08-17
------------------

Added
~~~~~

- Better support for complex data structures, especially data types that
  include lists in their data.
- Support for extension types, xnatpy automatically searches for all extension
  xsd files and will create Python classes for those as well.
- Listings can be indexed with integers to get their n-th element, the order
  is the order given by XNAT.
- Allow overwriting of files on upload
- Support for listing users via /data/users REST endpoint in the session.users

Changed
~~~~~~~

- xsd schema parsing is completely rewritten, allows more support for complex
  data structures

Fixed
~~~~~

- Support for XNAT 1.7.3
- Fixed a bug where opening a second session would ruin the first one, it
  should now be possible to have multiple sessions open concurently.


0.2.3 - 2017-04-03
------------------

Added
~~~~~

- xnatpy now uses the progressbar2 package to deliver fancy progress bars when downloading
- Attributes in the session that allow users to skip/alter the checking of responses


Changed
~~~~~~~

- Logging now using a logger. You can change the log levels or supply your own logger which xnatpy will use in favour of its own
- xnatpy now gets the version information from 1.7 xnat correctly


Fixed
~~~~~

- A bug in XNAT 1.7 caused the prearchive routes to be wrong, added a work around that fixes the prearchive with xnatpy